[gd_scene load_steps=2 format=3 uid="uid://rrsh74vfp75c"]

[ext_resource type="Script" path="res://Scripts/UI/options_menu.gd" id="1_211di"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_211di")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="OptionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Back to main menu"

[node name="Choosing Menu" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -480.0
offset_right = 400.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 0

[node name="Audio" type="TabBar" parent="Choosing Menu"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Choosing Menu/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Choosing Menu/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Choosing Menu/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="Choosing Menu/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="Label2" type="Label" parent="Choosing Menu/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute audio"

[node name="Mute" type="CheckBox" parent="Choosing Menu/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit Button" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="Choosing Menu/Audio/MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Choosing Menu/Audio/MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
